--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="utf-8">
   <title>Pet Finder</title>
 
+   <!-- fevicon -->
+   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="pet.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
 
@@ -62,7 +69,7 @@
         <div class="col-lg-6">
           <h1 class="big-heading">Meet new and interesting dogs and cats nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>Reviews</button>
         </div>
 
         <div class="col-lg-6">
@@ -206,7 +213,7 @@
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
-            <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
+            <a href="signup.html" target="_blank" style="text-decoration:none;"><button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button> </a>
           </div>
         </div>
       </div>
@@ -221,7 +228,7 @@
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
-            <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+            <a href="signup.html"  target="_blank" style="text-decoration:none;"> <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button> </a>
           </div>
         </div>
       </div>
@@ -237,7 +244,7 @@
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
-            <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+            <a href="signup.html" target="_blank" style="text-decoration:none;"><button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button> </a>
 
           </div>
         </div>
