--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
         <div class="col-lg-6">
           <h1 class="big-heading">Meet new and interesting dogs and cats nearby.</h1>
-          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>Reviews</button>
+          <a href="https://apps.apple.com/us/app/petfinder-adopt-a-pet/id557228073" target="_blank"><button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button></a>
+          <a href="button.html" target="_blank"><button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>Reviews</button></a>
         </div>
 
         <div class="col-lg-6">
@@ -108,6 +108,7 @@
           <p>Click here for more inquiry about pet adoption all question and answer query.</p>
         </div>
       </div>
+
 
 
     </div>
@@ -164,31 +165,31 @@
 <div class="card-second" style="width: 18rem;">
   <img src="dog1.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Name: Max,   age: 2months</p>
+    <a href="adoption.html" target="_blank"><p class="card-text">Name: Max,   age: 2months</p></a>
   </div>
 </div>
 <div class="card-second" style="width: 18rem;">
   <img src="dog2.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Name: Luna, age:unknown</p>
+    <a href="adoption.html" target="_blank"><p class="card-text">Name: Luna, age:unknown</p></a>
   </div>
 </div>
 <div class="card-second" style="width: 18rem;">
   <img src="cat1.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Name: Elly, age: 3months</p>
+    <a href="adoption.html" target="_blank"><p class="card-text">Name: Elly, age: 3months</p></a>
   </div>
 </div>
 <div class="card-second" style="width: 18rem;">
   <img src="cat2.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Name: pixi, age: 2years</p>
+    <a href="adoption.html"target="_blank"><p class="card-text">Name: pixi, age: 2years</p></a>
   </div>
 </div>
 <div class="card-second" style="width: 18rem;">
   <img src="cat3.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Name: tee, age: 8months</p>
+    <a href="adoption.html"target="_blank"><p class="card-text">Name: tee, age: 8months</p></a>
   </div>
 </div>
 </section>
@@ -264,8 +265,8 @@
     <div class="container-fluid">
 
       <h3 class="big-heading">Now its easy to adopt the pets with pet finder.</h3>
-      <button class="download-button btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i> Download</button>
-      <button class="download-button btn btn-lg brn-light" type="button"><i class="fab fa-google-play"></i> Download</button>
+      <a href="https://apps.apple.com/us/app/petfinder-adopt-a-pet/id557228073"target="_blank"><button class="download-button btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i> Download</button></a>
+      <a href="https://play.google.com/store/apps/details?id=com.discovery.petfinder"target="_blank"><button class="download-button btn btn-lg brn-light" type="button"><i class="fab fa-google-play"></i> Download</button></a>
     </div>
   </section>
 
